--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-django==4.1
+asgiref==3.6.0
+Django==4.1.5
+django-countries==7.5.1
 django-crispy-forms==1.14.0
+django-phonenumber-field==7.0.2
+phonenumbers==8.13.5
+sqlparse==0.4.3
+typing_extensions==4.4.0
