--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.6.0
-Django==4.1.5
+Django==4.1.7
 django-countries==7.5.1
 django-crispy-forms==1.14.0
 django-phonenumber-field==7.0.2
+gunicorn==20.1.0
 phonenumbers==8.13.5
+Pillow==9.5.0
+psycopg2-binary==2.9.6
+six==1.16.0
 sqlparse==0.4.3
 typing_extensions==4.4.0
+whitenoise==6.4.0
